# subly

./: .env.example  .gitignore  README.md  pyproject.toml
cli/subly/: cli.py  events.py  transcribe.py
codebase_course/: README.md  index.html  vercel.json
codebase_course/course/: index.html
codebase_course/course/css/: styles.css
codebase_course/course/js/: app.js  content.js
codebase_course/course/v2/: index.html
codebase_course/course/v2/css/: board.css
codebase_course/css/: styles.css
codebase_course/js/: app.js  content.js
codebase_course/v2/: index.html
codebase_course/v2/css/: board.css
desktop/: README.md  package-lock.json  package.json
desktop/electron/: main.js
desktop/scripts/: dev-electron.mjs  make-icon.mjs
desktop/src/: App.tsx  styles.css  useJob.ts
desktop/src/components/: RunningView.tsx
desktop/src/eventsource/: types.ts
jap_video_sub/: __init__.py  audio.py  cli.py  srt.py  transcribe.py  translate.py
