[project]
name = "jap-video-sub"
version = "0.1.0"
description = "Offline-first CLI that turns a Japanese-audio video into time-synced English subtitles."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx-whisper>=0.4.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
jap-video-sub = "jap_video_sub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jap_video_sub"]
